--- a/chart/madre/values.yaml
+++ b/chart/madre/values.yaml
@@ -21,7 +21,7 @@ madrecliente:
     - prescricao
     - farmacia
     - suprimentos
-    - consulta
+    - madreconsulta
 
 gateway:
   name: gateway
