Ajustar changelog fake-data e arquivos dependentes - BASIS-182771

--- a/pacientes/src/main/resources/config/application-dev.yml
+++ b/pacientes/src/main/resources/config/application-dev.yml
@@ -71,7 +71,7 @@ spring:
       uris: http://localhost:9200
   liquibase:
     # Remove 'faker' if you do not want the sample data to be loaded automatically
-    contexts: dev, faker
+    contexts: dev, faker, carga-exemplos
   mail:
     host: localhost
     port: 25
