Adicionando funcionalidade aos filtro de pesquisa de consulta marcada - BASIS-182764

--- a/consulta/src/main/resources/config/application.yml
+++ b/consulta/src/main/resources/config/application.yml
@@ -215,3 +215,4 @@ jhipster:
 # ===================================================================
 
 # application:
+nuvem.elasticsearch.reindex.enabled: true
