Alterar configuração do projeto internação - BASIS-186314

--- a/internacao/src/main/resources/config/application.yml
+++ b/internacao/src/main/resources/config/application.yml
@@ -163,7 +163,17 @@ spring:
   output:
     ansi:
       console-available: true
-
+  cloud:
+    stream:
+      kafka:
+        consumer:
+          startOffset: earliest
+      bindings:
+        pacienteConsumer-in-0:
+          destination: madre-paciente
+          group: madre-internacao
+    function:
+      definition: pacienteConsumer
 server:
   servlet:
     session:
