--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,8 +31,8 @@
         "@fullcalendar/timegrid": "4.4.2",
         "@ngx-progressbar/core": "^5.2.1",
         "@ngx-progressbar/http": "^5.2.1",
-        "@nuvem/angular-base": "~11.2.0",
-        "@nuvem/primeng-components": "~11.2.0",
+        "@nuvem/angular-base": "^11.2.1",
+        "@nuvem/primeng-components": "^11.2.1",
         "chart.js": "2.9.4",
         "classlist.js": "^1.1.20150312",
         "core-js": "~3.5.0",
