Arrumando alguns problemas nas tabelas de contato, endereço e responsável, porem ainda não está completo BASIS-213849

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
         "@ngx-progressbar/core": "^5.2.1",
         "@ngx-progressbar/http": "^5.2.1",
         "@nuvem/angular-base": "^11.2.1",
-        "@nuvem/primeng-components": "^11.2.1",
+        "@nuvem/primeng-components": "^11.2.1-0",
         "chart.js": "2.9.4",
         "classlist.js": "^1.1.20150312",
         "core-js": "~3.5.0",
