--- a/internacao/src/main/resources/config/application-dev.yml
+++ b/internacao/src/main/resources/config/application-dev.yml
@@ -71,7 +71,7 @@ spring:
       uris: http://localhost:9200
   liquibase:
     # Remove 'faker' if you do not want the sample data to be loaded automatically
-    contexts: dev, faker, carga-exemplos
+    contexts: dev, faker
   mail:
     host: localhost
     port: 25
