--- a/exames/src/main/docker/Dockerfile
+++ b/exames/src/main/docker/Dockerfile
@@ -5,6 +5,8 @@ ENV SPRING_OUTPUT_ANSI_ENABLED=ALWAYS \
     JAVA_OPTS="" \
     TZ="America/Sao_Paulo"
 
+RUN apk add --no-cache msttcorefonts-installer fontconfig && update-ms-fonts
+
 RUN apk update && \
     apk add --no-cache tzdata && \
 	cp /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
