Adicionar os módulos segurança e exames no ambiente do Madre - BASIS-219724

--- a/chart/madre/templates/deployment.yaml
+++ b/chart/madre/templates/deployment.yaml
@@ -14,4 +14,8 @@
 ---
 {{- template "common.microservice" (dict "context" . "microservice" (merge .Values.madreconsulta .Values.comum)) -}}
 ---
+{{- template "common.microservice" (dict "context" . "microservice" (merge .Values.seguranca .Values.comum)) -}}
+---
+{{- template "common.microservice" (dict "context" . "microservice" (merge .Values.exames .Values.comum)) -}}
+---
 {{- template "common.client" (dict "context" . "client" (merge .Values.madrecliente .Values.comum) "gateway" .Values.gateway) -}}
