--- a/exames/pom.xml
+++ b/exames/pom.xml
@@ -159,6 +159,12 @@
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-compress</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>javax.cache</groupId>
@@ -456,6 +462,12 @@
             <artifactId>poi-ooxml</artifactId>
             <version>4.1.0</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-compress</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- jhipster-needle-maven-add-dependency -->
     </dependencies>
