--- a/exames/src/main/docker/postgresql.yml
+++ b/exames/src/main/docker/postgresql.yml
@@ -8,5 +8,7 @@ services:
       - POSTGRES_USER=madreexames
       - POSTGRES_PASSWORD=
       - POSTGRES_HOST_AUTH_METHOD=trust
+      - TZ=America/Sao_Paulo
+      - PGTZ=America/Sao_Paulo
     ports:
       - 5438:5432
