Corrigir import Query.params - BASIS-223094
Signed-off-by: yukioz <yukio.link@gmail.com>

--- a/exames/src/main/resources/config/application-dev.yml
+++ b/exames/src/main/resources/config/application-dev.yml
@@ -18,6 +18,7 @@ logging:
     ROOT: DEBUG
     io.github.jhipster: DEBUG
     br.com.basis.madre.madreexames: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 
 eureka:
   instance:
