Atualizar formulario de pacientes - deixar responsivo, adicionar icons nas opcoes de TabView e adicionar marcacao com asterisco nos campos obrigatorios e mensagens de validaçao no inputs - BASIS-233514

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -20,6 +20,7 @@
                         "assets": ["src/assets", "src/upload.php"],
                         "styles": [
                             "node_modules/primeng/resources/primeng.min.css",
+                            "node_modules/primeicons/primeicons.css",
                             "node_modules/fullcalendar/dist/fullcalendar.min.css",
                             "node_modules/@fullcalendar/core/main.min.css",
                             "node_modules/@fullcalendar/daygrid/main.min.css",
