--- a/seguranca/src/main/docker/elasticsearch.yml
+++ b/seguranca/src/main/docker/elasticsearch.yml
@@ -2,8 +2,8 @@ version: '2'
 services:
   madreseguranca-elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.13
-    volumes:
-      - ~/volumes/jhipster/madreseguranca/elasticsearch/:/usr/share/elasticsearch/data/
+#   volumes:
+ #    - ~/volumes/jhipster/madreseguranca/elasticsearch/:/usr/share/elasticsearch/data/
     ports:
       - 9200:9200
       - 9300:9300
